--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,11 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+p.is-action {
+  background-color: $black;
+  border: 1px solid $grey-dark;
+  border-radius: $radius;
+  color: $grey-dark;
+  padding: 0 4px;
+}
